FIX: Update Vercel configuration for client-side routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "framework": "vite",
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": ".*\\.*", "dest": "/index.html" },
+    { "src": ".*", "dest": "/index.html" }
+  ]
 }
